# nominal

./: .gitignore  CMakeLists.txt  Ideas.ns.txt  LICENSE  README.md
Executable/: CMakeLists.txt
Executable/Source/: Main.cpp
Tests/: CMakeLists.txt
Tests/Source/: LexerTests.cpp  Main.cpp
